# symono

./: Cargo.toml  LICENSE.md  README.md
src/: latex.rs  lib.rs  main.rs  symono.pest
tests/: latex.rs
web/: Cargo.toml
web/src/: lib.rs
